--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
     "cmake.configureOnOpen": false,
-    "cmake.sourceDirectory": "/Users/abizyane/Desktop/cub3D/MLX42"
+    "cmake.sourceDirectory": "/Users/abizyane/Desktop/cub3D/MLX42",
+    "files.associations": {
+        "*.excalidraw": "json",
+        "*.excalidrawlib": "json",
+        "fcntl.h": "c",
+        "math.h": "c"
+    }
 }
