--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
         "*.excalidraw": "json",
         "*.excalidrawlib": "json",
         "fcntl.h": "c",
-        "math.h": "c"
+        "math.h": "c",
+        "cub3d.h": "c",
+        "limits.h": "c",
+        "mlx42.h": "c"
     }
 }
